--- a/test/testStore.html
+++ b/test/testStore.html
@@ -2,15 +2,19 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="text/javascript">
-        var Qmik = Qmik || {};
-    </script>
-    
+      <link rel="stylesheet" href="unit/qunit.css" type="text/css" media="screen" />
+  <script type="text/javascript" src="unit/qunit.js"></script>
+  
+   <script type="text/javascript" src="../src/Qmik.js"> </script>
     <script type="text/javascript" src="../src/Qmik.Store.js"></script>
     <script type="text/javascript" src="testStore.js"></script>
     <title></title>
 </head>
 <body>
+  <h1 id="qunit-header">QUnit example</h1>
+  <h2 id="qunit-banner"></h2>
+  <h2 id="qunit-userAgent"></h2>
+  <ol id="qunit-tests"></ol>
 </body>
 
 </html>
