--- a/test/testQuery.html
+++ b/test/testQuery.html
@@ -50,8 +50,8 @@ $.config({debug:true});
 	function queryb(){
 		
 		var v=$("div li.k2  ");
-
-		console.log(v);
+		alert(v.length);
+		$.log(v);
  
 		
  		var start=new Date().getTime();
