--- a/test/testQuery.html
+++ b/test/testQuery.html
@@ -8,7 +8,7 @@
 
 	<script type="text/javascript" src="../src/QmikN.js"> </script>
 	<script type="text/javascript" src="../src/Qmik.Query.js"> </script>
- <!-- 
+  <!--
 <script type="text/javascript" src="zepto.js"> </script>
 <script type="text/javascript" src="../src/Qmik.js"> </script>-->
 <script type="text/javascript " src="testQuery.js "></script>
@@ -32,7 +32,7 @@
 <div id="top22">
 <ol id="b" name="bb">
 	<li vv="mb">1</li>
-	<li>2<span>dd</span></li>
+	<li>2<span key="ck" class="aa" >dd</span></li>
 	<li>3</li>
 	<li>4</li>
 	<li>5</li>
@@ -45,14 +45,14 @@
 <h2 id="qunit-userAgent"></h2>
 <ol id="qunit-tests"></ol>
 </body>
+
 <script type="text/javascript">
-$.config({debug:true});
+ 
 	function queryb(){
 		
-		var v=$("div li.k2  ");
-		alert(v.length);
-		$.log(v);
- 
+		var v=$("  div li>span.aa    ");
+		//$.log(v);
+ 		console.log(v)
 		
  		var start=new Date().getTime();
 		//for(var i=0;i<50000;i++){
@@ -61,5 +61,11 @@ $.config({debug:true});
  		var end=new Date().getTime();
 
 	}
+	window.onload=function(){
+		queryb();
+	}
+	//$(document).ready(function(){
+		//console.log("tttttttttttttttt");
+	//})
 </script>
 </html>
