--- a/test/testHash.html
+++ b/test/testHash.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="unit/qunit.js"></script>
 
 <script type="text/javascript" src="../dist/Qmik-debug.js"> </script>
-<script type="text/javascript" src="../src/Qmik.Hash.js "></script>
+<script type="text/javascript" src="../src/plugins/Qmik.Hash.js "></script>
 <script type="text/javascript " src="testHash.js "></script>
 <title></title>
 </head>
