--- a/test/testSun.html
+++ b/test/testSun.html
@@ -9,23 +9,12 @@
 <title></title>
 </head>
 <body>
-<div style="left: 300px;"><a href="#name=me1&age=161;">1</a><br />
-<a href="#name=me2&age=162;">2</a><br />
-<a href="#name=me3&age=163;">3</a><br />
-<a href="#name=me4&age=164;">4</a><br />
-<a href="#name=me5&age=165;">5</a><br />
-<a href="#name=me6&age=166;">6</a><br />
-<a href="#name=me7&age=167;">7</a><br />
-<a href="#name=m天下&age=167;">天下</a><br />
-<a id="href1" href="javascript:">事件1:</a><br />
-<a id="href2" href="javascript:">事件2:</a><br />
-<a id="href3" href="javascript:">事件3:</a><br />
+<div style="left: 300px;"> 
+
 </div>
 
 </body>
 <script type="text/javascript" src="../dist/Qmik-debug.js"> </script>
+<!-- <script type="text/javascript" src="sea-debug.js"> </script>-->
 <script type="text/javascript " src="testSun.js "></script>
-<script type="text/javascript">
-
-</script>
 </html>
