--- a/test/testQuery.html
+++ b/test/testQuery.html
@@ -4,67 +4,96 @@
 <meta http - equiv="Content-Type" content="text/html; charset=utf-8"/ >
 <link rel="stylesheet" href="unit/qunit.css" type="text/css"
 	media="screen" />
-<script type="text/javascript" src="unit/qunit.js"></script>
-
-<script type="text/javascript" src="../dist/Qmik-debug.js"> </script>
-  <!--
-<script type="text/javascript" src="zepto.js"> </script>
--->
-<script type="text/javascript " src="testQuery.js "></script>
+<script type="text/javascript" charset="utf-8" src="unit/qunit.js"></script>
 <title></title>
+<style>
+#query {
+	background: #aeaeae;
+}
+
+#query h3 {
+	background: #ff0000;
+}
+
+#query div {
+	float: left;
+	width: 100%;
+}
+
+#part1 {
+	background: #adaf49;
+}
+
+#part2 {
+	background: #1daf49;
+}
+
+#part1 li:hover {
+	background: yellow;
+}
+</style>
 </head>
 
 <body>
-<input value="">
-<input type="button" id="query" value="query" onclick="queryb()"/>
-<div id="top1" class="mn" style="background-color: green;">
-<div id="top21">
-<ol id="a" name="aa">
-	<li>1</li>
-	<li>2</li>
-	<li class="k1 k2 k3">3</li>
-	<li>4</li>
-	<li>5</li>
-	<li>6</li>
+<div id="query">
+<div>
+<h3>part1</h3>
+<ol id="part1">
+	<li flag="p1">theme 1</li>
+	<li flag="p1">theme 2</li>
+	<li flag="p1">theme 3</li>
+	<li flag="p1">theme 4</li>
+	<li flag="p1">theme 5</li>
+	<li flag="p1">theme 6</li>
+	<li flag="p1">theme 7</li>
 </ol>
 </div>
-<div id="top22">
-<ol id="b" name="bb">
-	<li vv="mb">1</li>
-	<li>2<span key="ck" class="aa" >dd</span></li>
-	<li>3</li>
-	<li>4</li>
-	<li>5</li>
-	<li>6</li>
+
+<div>
+<h3>part2</h3>
+<ol id="part2">
+	<li flag="p2">theme 1</li>
+	<ol>
+		<li>aaa</li>
+	</ol>
+	<li flag="p2">theme 2</li>
+	<ol>
+		<li>aaa</li>
+	</ol>
+	<li flag="p2">theme 3</li>
+	<ol>
+		<li>aaa</li>
+	</ol>
+	<li flag="p2">theme 4</li>
+	<ol>
+		<li>aaa</li>
+	</ol>
+	<li flag="p2">theme 5</li>
+	<ol>
+		<li>aaa</li>
+	</ol>
+	<li flag="p2">theme 6</li>
+	<ol>
+		<li>aaa</li>
+	</ol>
+	<li flag="p2">theme 7</li>
+	<ol>
+		<li>aaa</li>
+	</ol>
 </ol>
 </div>
+
 </div>
+
+<!--          unit test -->
+<div>
 <h1 id="qunit-header">Qmik Query example</h1>
 <h2 id="qunit-banner"></h2>
 <h2 id="qunit-userAgent"></h2>
 <ol id="qunit-tests"></ol>
+</div>
 </body>
+<script type="text/javascript" charset="utf-8" src="../dist/Qmik-debug.js"> </script>
+<script type="text/javascript" charset="utf-8" src="testQuery.js "></script>
 
-<script type="text/javascript">
- 
-	function queryb(){
-		
-		var v=$("  div li>span.aa    ");
-		//$.log(v);
- 		console.log(v)
-		
- 		var start=new Date().getTime();
-		//for(var i=0;i<50000;i++){
-			//$("#top1 #top22 li");
-		//}
- 		var end=new Date().getTime();
-
-	}
-	window.onload=function(){
-		queryb();
-	}
-	//$(document).ready(function(){
-		//console.log("tttttttttttttttt");
-	//})
-</script>
 </html>
