--- a/test/testQuery.html
+++ b/test/testQuery.html
@@ -3,33 +3,39 @@
 <head>
 <meta http - equiv="Content-Type" content="text/html; charset=utf-8"/ >
 <link rel="stylesheet" href="unit/qunit.css" type="text/css"
-	media="screen" />
+    media="screen" />
 <script type="text/javascript" charset="utf-8" src="unit/qunit.js"></script>
 <title></title>
 <style>
 #query {
-	background: #aeaeae;
+    background: #aeaeae;
 }
 
 #query h3 {
-	background: #ff0000;
+    background: #ff0000;
 }
 
 #query div {
-	float: left;
-	width: 100%;
+    float: left;
+    width: 100%;
 }
 
 #part1 {
-	background: #adaf49;
+    background: #adaf49;
 }
 
 #part2 {
-	background: #1daf49;
+    background: #1daf49;
 }
 
 #part1 li:hover {
-	background: yellow;
+    background: yellow;
+}
+
+.addClass{
+    background: #ffeeaa;
+    font-size: 36px;
+    color:red;
 }
 </style>
 </head>
@@ -39,50 +45,61 @@
 <div>
 <h3>part1</h3>
 <ol id="part1">
-	<li flag="p1">theme 1</li>
-	<li flag="p1">theme 2</li>
-	<li flag="p1">theme 3</li>
-	<li flag="p1">theme 4</li>
-	<li flag="p1">theme 5</li>
-	<li flag="p1">theme 6</li>
-	<li flag="p1">theme 7</li>
+    <li flag="p1"><span>theme 1</span></li>
+    <li flag="p1" id="p1li1">theme 2</li>
+    <li flag="p1">theme 3</li>
+    <li flag="p1">theme 4</li>
+    <li flag="p1"><span>theme 5</span></li>
+    <li flag="p1">theme 6</li>
+    <li flag="p1"><span>theme 7</span></li>
 </ol>
 </div>
 
 <div>
 <h3>part2</h3>
 <ol id="part2">
-	<li flag="p2">theme 1</li>
-	<ol>
-		<li>aaa</li>
-	</ol>
-	<li flag="p2">theme 2</li>
-	<ol>
-		<li>aaa</li>
-	</ol>
-	<li flag="p2">theme 3</li>
-	<ol>
-		<li>aaa</li>
-	</ol>
-	<li flag="p2">theme 4</li>
-	<ol>
-		<li>aaa</li>
-	</ol>
-	<li flag="p2">theme 5</li>
-	<ol>
-		<li>aaa</li>
-	</ol>
-	<li flag="p2">theme 6</li>
-	<ol>
-		<li>aaa</li>
-	</ol>
-	<li flag="p2">theme 7</li>
-	<ol>
-		<li>aaa</li>
-	</ol>
+    <li flag="p2">theme 1</li>
+    <ol>
+        <li>aaa</li>
+    </ol>
+    <li flag="p2">theme 2</li>
+    <ol>
+        <li>aaa</li>
+    </ol>
+    <li flag="p2">theme 3</li>
+    <ol>
+        <li>aaa</li>
+    </ol>
+    <li flag="p2">theme 4</li>
+    <ol>
+        <li>aaa</li>
+    </ol>
+    <li flag="p2">theme 5</li>
+    <ol>
+        <li>aaa</li>
+    </ol>
+    <li flag="p2">theme 6</li>
+    <ol>
+        <li>aaa</li>
+    </ol>
+    <li flag="p2">theme 7</li>
+    <ol>
+        <li>aaa</li>
+    </ol>
 </ol>
 </div>
 
+<div>
+<h3>part3</h3>
+<ol id="part3">
+    <li flag="p2">theme 1</li>
+    <ol>
+        <li>aaa</li>
+    </ol>
+    <li flag="p2">theme 2</li>
+ 
+</ol>
+</div>
 </div>
 
 <!--          unit test -->
@@ -95,5 +112,5 @@
 </body>
 <script type="text/javascript" charset="utf-8" src="../dist/Qmik-debug.js"> </script>
 <script type="text/javascript" charset="utf-8" src="testQuery.js "></script>
-
+<script type="text/javascript" charset="utf-8" src="testQueryFn.js "></script>
 </html>
