--- a/test/testHash.html
+++ b/test/testHash.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="unit/qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="unit/qunit.js"></script>
 
-<script type="text/javascript" src="../dist/Qmik-debug.js"> </script>
+<script type="text/javascript" src="../assets/Qmik-debug.js"> </script>
 <script type="text/javascript" src="../src/plugins/Qmik.Hash.js "></script>
 <script type="text/javascript " src="testHash.js "></script>
 <title></title>
@@ -13,19 +13,18 @@
 "test/test1QUnit.html"
 <body>
 "test/test1QUnit.html"
-<div style="left: 300px;"><a href="#name=me1&age=161;">1</a><br />
-<a href="#name=me2&age=162;">2</a><br />
+<div style="left: 300px;">
+<a href="#name=me1&age=161;">1</a><br />
+<a href="#name=me2&age=162;&module=mo">2</a><br />
 <a href="#name=me3&age=163;">3</a><br />
-<a href="#name=me4&age=164;">4</a><br />
-<a href="#name=me5&age=165;">5</a><br />
-<a href="#name=me6&age=166;">6</a><br />
-<a href="#name=me7&age=167;">7</a><br />
-<a href="#name=m天下&age=167;">天下</a><br />
+ 
 <a id="href1" href="javascript:">事件1:</a><br />
 <a id="href2" href="javascript:">事件2:</a><br />
 <a id="href3" href="javascript:">事件3:</a><br />
 </div>
-
+<div>
+    <!-- <iframe src="testQuery.html" id="content"></iframe>-->
+</div>
 </body>
 <script type="text/javascript">
 	//定义测试模块
