--- a/test/testSun.html
+++ b/test/testSun.html
@@ -14,7 +14,7 @@
 </div>
 
 </body>
-<script type="text/javascript" src="../dist/Qmik-debug.js"> </script>
+<script type="text/javascript" src="../assets/Qmik-debug.js"> </script>
 <!-- <script type="text/javascript" src="sea-debug.js"> </script>-->
 <script type="text/javascript " src="testSun.js "></script>
 </html>
