--- a/test/testEvent.html
+++ b/test/testEvent.html
@@ -23,7 +23,7 @@
 </div>
 
 </body>
-<script type="text/javascript" src="../dist/Qmik-debug.js"> </script>
+<script type="text/javascript" src="../assets/Qmik-debug.js"> </script>
 <script type="text/javascript " src="testEvent.js "></script>
 <script type="text/javascript">
 
