--- a/test/testQuery.html
+++ b/test/testQuery.html
@@ -110,7 +110,7 @@
 <ol id="qunit-tests"></ol>
 </div>
 </body>
-<script type="text/javascript" charset="utf-8" src="../dist/Qmik-debug.js"> </script>
+<script type="text/javascript" charset="utf-8" src="../assets/Qmik-debug.js"> </script>
 <script type="text/javascript" charset="utf-8" src="testQuery.js "></script>
 <script type="text/javascript" charset="utf-8" src="testQueryFn.js "></script>
 </html>
