--- a/test/testNav.html
+++ b/test/testNav.html
@@ -6,12 +6,12 @@
   <script type="text/javascript" src="unit/qunit.js"></script>
 <script type="text/javascript" src="../assets/Qmik-debug.js"> </script>
 <script type="text/javascript" src="../src/plugins/Qmik.nav.js "></script>
-<script type="text/javascript " src="testNav.js "></script>
+<script type="text/javascript" src="testNav.js"></script>
 
 <title></title>
 </head>
 <body>
-"test/test1QUnit.html"
+<div id="show"> "test/test1QUnit.html" <span>adf</span></div>
 <div style="left: 300px;">
  
 <a id="click1" href="javascript:">click1:</a><br />
