--- a/test/testStore.html
+++ b/test/testStore.html
@@ -5,8 +5,8 @@
       <link rel="stylesheet" href="unit/qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="unit/qunit.js"></script>
   
-   <script type="text/javascript" src="../assets/Qmik.min.js"> </script>
-    <script type="text/javascript" src="../src/plugins/Qmik.Store.js"></script>
+   <script type="text/javascript" src="../assets/Qmik-debug.js"> </script>
+    <script type="text/javascript" src="../src/plugins/Qmik.store.js"></script>
     <script type="text/javascript" src="testStore.js"></script>
     <title></title>
 </head>
