--- a/example/qmik/index.html
+++ b/example/qmik/index.html
@@ -1,156 +1,55 @@
-
-<!-- saved from url=(0031)http://www.qmik.org/#home:home; -->
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<meta name="keywords" content="Qmik js">
-<meta name="description"
-	content="Qmik是一个精简高效的js框架,核心框架大小11kb,是一个html5移动开发的最佳首选,修改了ajax的缓存机制,使您的网站得到飞速的体验,采用的html5的本地缓存机制加入了ajax的缓存里">
-<title>Qmik之家</title>
-<meta name="copyright" content="2012-2012 Qmik. All Rights Reserved">
-<meta name="author" content="leochen">
-<meta name="format-detection" content="telephone=no">
-<meta name="viewport"
-	content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<!-- <link rel="shortcut icon" href="../favicon.ico">-->
-<link rel="stylesheet" type="text/css" href="css/style.css">
-
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="keywords" content="Qmik js">
+	<meta name="description" content="Qmik是一个精简高效的js框架,核心框架大小11kb,是一个html5移动开发的最佳首选,修改了ajax的缓存机制,使您的网站得到飞速的体验,采用的html5的本地缓存机制加入了ajax的缓存里">
+	<title>Qmik之家</title>
+	<meta name="copyright" content="2012-2012 Qmik. All Rights Reserved">
+	<meta name="author" content="leochen">
+	<meta name="format-detection" content="telephone=no">
+	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-<div id="container" class="container"><!-- Header with Navigation -->
-<div id="head" class="head">
-<div class="nav"><a class=""><img class="logo"
-	src="images/logo.png" width="52px" height="52px"></a>
-<ul id="navigation">
-	<li><a id="link-home" tag="nav" module="home" class="head_a"
-		href="javascript:void(0)">首页</a></li>
-	<li><a id="link-download" tag="nav" module="download"
-		class="head_a" href="javascript:void(0)">下载</a></li>
-	<li><a id="link-plugin" tag="nav" module="plugin" class="head_a"
-		href="javascript:void(0)">插件</a></li>
-	<li><a id="link-api" tag="nav" module="api" class="head_a" method="showMenu"
-		href="javascript:void(0)">API</a></li>
-	<li><a id="link-about" tag="nav" module="about" class="head_a"
-		href="javascript:void(0)">关于Qmik</a></li>
-</ul>
-</div>
-</div>
-
-<div class="main "><!-- Home -->
-<div id="home" class="panel roundedTop head_click_a"
-	style="display: block; opacity: 1;">
-<div class="content_home">
-<div><img class="content_rotate" src="images/logo.png">
-<div class=" ">
-<div class=" content_block">
-<h2>Qmik核心</h2>
-<p class=""><img src="images/logo.png">
-Qmik是一个快速和精简的JavaScript库，它简化了HTML文档遍历，事件处理，动画，以及用于快速Web开发的Ajax交互。 <br>
-Qmik是旨在改变你编写JavaScript的方式。
-Qmik的语法与jquery是一致的,核心库大小13k左右,支持uc,ie,基于webkit内核的浏览器(如chrom,safari等),firefox;
-推荐做移动web开发.</p>
-</div>
-</div>
-<div class=" ">
-<div class="content_block">
-<h2>Qmik插件</h2>
-<p class=""><img src="images/logo.png">
-Qmik框架支持扩展,可以通过插件式的开发,来额外增加您的功能.</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-<!-- /Home --> <!-- Home -->
-<div id="download" class="panel  roundedTop" style="display: none;"
-	tag="me">
-<div class="content">
-<h2><a href="http://www.qmik.org/qmik/Qmik.min.1.19.js">Qmik下载</a></h2>
-<span style="width: 100px;">
-<ul>
-
-	<li><time> 2012-10-30 </time> <a
-		href="http://www.qmik.org/qmik/Qmik.0.91.005.js">Qmik.0.91.005.js</a>
-	</li>
-
-</ul>
-</span></div>
-</div>
-<!-- Home -->
-<div id="plugin" class="panel  roundedTop" style="display: none;">
-<div class="content">
-<h2><a href="javascript:void(0)">插件下载</a></h2>
-<br>
-<span style="width: 100px;">
-<ul>
-	<li><time> 2012-07-20 </time> <a href="">ajax利用hash实现的前进后退
-	插件(查看本页面实际前进后退(主要插件是Qmik.navHash.js))</a><a class="right"
-		href="http://www.qmik.org/plugin/Qmik.navHash.js">下载 </a></li>
-	<li><time> 2012-07-22 </time> <a
-		href="http://www.qmik.org/demo/Qmik-view/drag.html">拖动(pc端和移动端都适合,不兼容ie)</a><a
-		class="right" href="http://www.qmik.org/plugin/Qmik.drag.js">下载 </a></li>
-</ul>
-
-
-</span></div>
-</div>
-<!-- /Home --> <!-- About -->
-<div id="about" class="panel roundedTop" style="display: none;">
-<div class="content" id="about_content">
-<div class=" content_bblock">
-<h2>Qmik核心</h2>
-<p class=""><img src="images/logo.png">
-Qmik是一个快速和精简的JavaScript库，它简化了HTML文档遍历，事件处理，动画，以及用于快速Web开发的Ajax交互。 <br>
-Qmik是旨在改变你编写JavaScript的方式。 <b>Qmik的语法与jquery是一致的,核心库大小13k左右</b>,支持uc,ie(建议&gt;=ie9),基于webkit内核的浏览器(如chrom,safari等),firefox;
-推荐做移动web开发.<br>
-<b>建议部署一个Web工程来正常测试,有些功能需要在Web工程下才能正常使用,如本地缓存,ajax</b>) ,<br>
-插件式的开发($.fn.extend({swip:function(){...}}),
-$.extend({swip:function(){...}}))</p>
-</div>
-
-<div>
-<ul>
-	<li>1.精简,核心框架16k左右,拥有主流的常用接口常用的判断接口</li>
-	<li>2.加入了html5的特性,主要是html5的本地缓存</li>
-	<li>
-	3.修改了ajax的缓存机制,ajax的缓存采用本地缓存来处理,对于不是实时更新的数据,可以放到缓存里,大量减少向服务请求(包含304请求)
-	</li>
-	<li>4.插件式开发,便于开发人员开发自己随心所欲的插件</li>
-</ul>
-</div>
-</div>
-</div>
-<!-- /About --> <!-- help -->
-<div id="api" class="panel roundedTop" style="display: none;">
-<div class="content_bblock">
-<div id="helpTree"></div>
-<div id="helpContent" class="right_content_block"></div>
-</div>
-</div>
- 
-<div id="linkOut" class="bottom roundedBottom">
-<div class="link_ad">
-<h5>站外连接</h5>
-<a href="http://www.iteye.com/">iteye</a> <a href="http://www.csdn.net/">csdn</a>
-<a href="http://www.bccn.net/">编程中国</a></div>
-<div class="link_ad">&nbsp;</div>
-
-
-</div>
-</div>
-</div>
+	<div id="container" class="ccontainer">
+		   <!-- 头部导航 -->
+		<div id="head" class="cheader">
+		    <div class="logo">
+		       <a ><img src="images/logo.png" width="52px" height="52px"></a>
+		    </div>
+			<div class="cnav">
+				<ul id="navigation">
+				    <li><a id="link-home" tag="nav" module="home" class="chearder_a"
+				        href="javascript:void(0)">首页</a></li>
+				    <li><a id="link-download" tag="nav" module="download"
+				        class="chearder_a" href="javascript:void(0)">下载</a></li>
+				    <li><a id="link-plugin" tag="nav" module="plugin" class="chearder_a"
+				        href="javascript:void(0)">插件</a></li>
+				    <li><a id="link-api" tag="nav" module="api" class="chearder_a" method="showMenu"
+				        href="javascript:void(0)">API</a></li>
+				    <li><a id="link-about" tag="nav" module="about" class="chearder_a"
+				        href="javascript:void(0)">关于Qmik</a></li>
+				</ul>
+			</div>
+		</div>
+		<!-- 主内容模块 -->
+		<div id="main" class="cmain">
+		
+		</div>
+	</div>	
 
 <script type="text/javascript" src="../../assets/Qmik-debug.js"></script>
 <script type="text/javascript" src="js/config.js"></script>
 <script type="text/javascript">
 (function(Q,define){
+    /*
    Q.use(["index"],function(index){  
+      console.log("----init start");
       console.log(index)
        index.init();
       });
-   var m={key:""};
-   console.log(">>"+Q.isPlainObject(m));
+  */
+   
 })(Qmik,Qmik.define);
 </script>
 </body>
