--- a/example/qmik/data/core/base/decode.html
+++ b/example/qmik/data/core/base/decode.html
@@ -5,9 +5,9 @@
         <div class="exmpain_row">
             <div class="explain_sub_title">例子1</div>
             <div class="explain_code">
-                <textarea style="overflow-y:visible;">
+                <textarea style="overflow-y:visible;" disabled="disabled">
                     var value=Q.decode('hello%2Fabc');
-                    Q.log(value);//>>hello/abc            
+                    $.log(value);//>>hello/abc            
                 </textarea>
             </div>
             <div class="explain_desc">采用encodeURIComponent编码实现此功能.</div>
