--- a/example/qmik/test.html
+++ b/example/qmik/test.html
@@ -1,54 +1,21 @@
-
-<!-- saved from url=(0031)http://www.qmik.org/#home:home; -->
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<meta name="keywords" content="Qjs">
-<meta name="description"
-	content="dfdf">
-<title>xxx</title>
-<meta name="copyright" content="2012-2012 Qmik. All Rights Reserved">
-<meta name="author" content="leochen">
-<meta name="format-detection" content="telephone=no">
-<meta name="viewport"
-	content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<!-- <link rel="shortcut icon" href="../favicon.ico">-->
-
-
+<script type="text/javascript" src="http://localhost:8001/assets/Qmik-debug.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+  $("p").live("click",function(){
+    $(this).slideToggle();
+  });
+  $("button").click(function(){
+    $("button").after("<p>This is a new><span>ddd</span> paragraph.</p>")
+  });
+});
+</script>
 </head>
 <body>
- 
-<div id="head" class="head">
-<div class="nav"><a class=""> </a>
-<ul id="navigation">
-	<li><a id="link-home" tag="nav" color="#cfcfcf" module="home" class="head_a"
-		href="javascript:void(0)">testhome</a></li>
-	<li><a id="link-download" tag="nav" color="#123456"  module="download"
-		class="head_a" href="javascript:void(0)">testdown</a></li>
-	<li><a id="link-plugin" tag="nav" color="#789abc"  module="plugin" class="head_a"
-		href="javascript:void(0)">testplug</a></li>
-	<li><a id="link-api" tag="nav" color="#fffaaa"  module="api" class="head_a"
-		method="showMenu" href="javascript:void(0)">testa</a></li>
-
-</ul>
-</div>
-</div>
-
-
-<script type="text/javascript" src="../../assets/Qmik-debug.js"></script>
-<script type="text/javascript" src="js/config.js"></script> <script
-	type="text/javascript">
-(function(Q,define){
-    /*
-   Q.use(["index"],function(index){  
-      console.log("----init start");
-      console.log(index)
-       index.init();
-      });
-  */
-   
-})(Qmik,Qmik.define);
-</script>
+<p><span>a</span>这是一个段落。</p>
+<p>><span>a</span>点击任意 p 元素会令其消失。包括本段落。</p>
+<button>在本按钮后面插入新的 p 元素</button>
+<p><b>注释：</b>通过使用 live() 方法而不是 bind() 方法，新的 p 元素同样会在点击时消失。</p>
 </body>
 </html>
