--- a/example/qmik/index.html
+++ b/example/qmik/index.html
@@ -1,68 +1,72 @@
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="keywords" content="Qmik js">
-	<meta name="description" content="Qmik是一个精简高效的js框架,核心框架大小11kb,是一个html5移动开发的最佳首选,修改了ajax的缓存机制,使您的网站得到飞速的体验,采用的html5的本地缓存机制加入了ajax的缓存里">
-	<title>Qmik之家</title>
-	<meta name="copyright" content="2012-2012 Qmik. All Rights Reserved">
-	<meta name="author" content="leochen">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <style type="text/css">
-        /* CSS reset */
-		body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,a,p,blockquote,th,td{
-		    margin: 0;
-		    padding: 0;
-		    text-decoration:none;
-		    font-family: "微软雅黑"
-		}
-		li{
-		    list-style: none;   
-		}
-		body {
-		    margin: 0;
-		    padding: 0;
-		    width: 100% %;
-		    overflow: auto;
-		    text-align: center;
-		    background: #ffffff;
-		}
-		.ccontainer{
-		    margin: 0 auto;
-		    min-width:990px;
-		    width: 80%;
-		}
-		
-		.cmain{
-		    width: 100%;
-		    height:100%;    
-		}
-    </style>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="keywords" content="Qmik js">
+<meta name="description"
+	content="Qmik是一个精简高效的js框架,核心框架大小20kb,是一个html5移动开发的最佳首选,修改了ajax的缓存机制,使您的网站得到飞速的体验,采用的html5的本地缓存机制加入了ajax的缓存里">
+<title>Qmik之家</title>
+<meta name="copyright" content="2012-2012 Qmik. All Rights Reserved">
+<meta name="author" content="leochen">
+<meta name="format-detection" content="telephone=no">
+<meta name="viewport"
+	content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+<style type="text/css">
+/* CSS reset */
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,a,p,blockquote,th,td
+	{
+	margin: 0;
+	padding: 0;
+	text-decoration: none;
+	font-family: "微软雅黑"
+}
+
+li {
+	list-style: none;
+}
+
+body {
+	margin: 0;
+	padding: 0;
+	width: 100% %;
+	overflow: auto;
+	text-align: center;
+	background: #ffffff;
+}
+
+.ccontainer {
+	margin: 0 auto;
+	min-width: 990px;
+	width: 80%;
+}
+
+.cmain {
+	width: 100%;
+	height: 100%;
+}
+</style>
 </head>
 <body>
 	<div id="container" class="ccontainer">
-		   <!-- 头部导航 -->
-		<div id="head_module">
-
-		</div>
+		<!-- 头部导航 -->
+		<div id="head_module"></div>
 		<!-- 主内容模块 -->
-		<div id="main_module" class="cmain">
-		
-		</div>
-	</div>	
+		<div id="main_module" class="cmain"></div>
+	</div>
 
-<script type="text/javascript" src="../../assets/Qmik-debug.js"></script>
-<script type="text/javascript" src="js/config.js"></script>
-<script type="text/javascript">
-(function(Q,define){
-    
-   $.use("index",function(index){
-      $.log("use index OK:");
-      //$.log(index.init.toString().replace(/([ ]{2,}|\r|\n|\t)/g,""))
-      index.init();
-  });
-   
-})(Qmik,Qmik.define);
-</script>
+	<script type="text/javascript" src="../../assets/Qmik-debug.js"></script>
+	<script type="text/javascript" src="module/config.js"></script>
+	<script type="text/javascript">
+		(function($, define) {
+			$.use([
+				"nav", "Qmik.nav", "home"
+			], function(headerNav, $, home) {
+				headerNav.showHeader();//显示头部导航
+				$.nav.onload(function() {
+					console.log("------ddd-112-")
+					home();
+				});
+			});
+		})(Qmik, Qmik.define);
+	</script>
 </body>
 </html>
