--- a/example/qmik/module/nav/header.html
+++ b/example/qmik/module/nav/header.html
@@ -1,67 +1,80 @@
 <style>
- .cheader{
-    margin: 0px auto;
-    height:55px;
-    padding-top:25px;
-    border-bottom: 1px solid #AACCEE;
+.cheader {
+	margin: 0px auto;
+	height: 55px;
+	padding-top: 25px;
+	border-bottom: 1px solid #AACCEE;
 }
-.logo {
-    position: relative;
-    height: 52px;
-    width: 50px;
-    float:left;
-    left:2%;
-}
-.cnav {
-    margin: 0 auto;
-    height: 52px;
-    line-height: 52px;
-    width:80%;
-}
-.cnav_fill{
-    float: left;    
-    width:100px;
-    height:52px;
-    background: #ffff00;
-    z-index: 99;
-}
-.cnav ul{
-     float:right;
-     height: 52px;
-}
-.cnav ul li{
-    float:left;
-    display: inline; /* li不换行 */
-    margin-left: 5px;
-}
-.chearder_a{
-    height: 52px;
-    color: #00A0E9;
-    font-weight:bold;
-    font-size: 24px;
-    width: 200px;
-    text-align: center;
-    padding: 0px 20px;
 
+.logo {
+	position: relative;
+	height: 52px;
+	width: 50px;
+	float: left;
+	left: 2%;
+}
+
+.cnav {
+	margin: 0 auto;
+	height: 52px;
+	line-height: 52px;
+	width: 80%;
+}
+
+.cnav_fill {
+	float: left;
+	width: 100px;
+	height: 52px;
+	background: #ffff00;
+	z-index: 99;
+}
+
+.cnav ul {
+	float: right;
+	height: 52px;
+}
+
+.cnav ul li {
+	float: left;
+	display: inline; /* li不换行 */
+	margin-left: 5px;
+}
+
+.chearder_a {
+	height: 52px;
+	color: #00A0E9;
+	font-weight: bold;
+	font-size: 24px;
+	width: 200px;
+	text-align: center;
+	padding: 0px 20px;
 }
 </style>
 
 <div id="head" class="cheader">
-            <div class="logo">
-               <a ><img src="images/logo.png" width="52px" height="52px"></a>
-            </div>
-            <div class="cnav">
-                <ul id="navigation">
-                    <li><a id="link-home" tag="nav" module="home" class="chearder_a"
-                        href="javascript:void(0)">首页</a></li>
-                    <li><a id="link-download" tag="nav" module="download"
-                        class="chearder_a" href="javascript:void(0)">下载</a></li>
-                    <li><a id="link-plugin" tag="nav" module="plugin" class="chearder_a"
-                        href="javascript:void(0)">插件</a></li>
-                    <li><a id="link-api" tag="nav" module="api" class="chearder_a" method="showMenu"
-                        href="javascript:void(0)">API</a></li>
-                    <li><a id="link-about" tag="nav" module="about" class="chearder_a"
-                        href="javascript:void(0)">关于Qmik</a></li>
-                </ul>
-            </div>
-        </div>
+	<div class="logo">
+		<a><img src="images/logo.png" width="52px" height="52px"> </a>
+	</div>
+	<div class="cnav">
+		<ul id="navigation">
+			<li><a id="link-home" tag="nav" module="Home" class="chearder_a"
+				method="showHome" href="javascript:void(0)">首页</a>
+			</li>
+			<li><a id="link-quick" tag="nav" module="API" class="chearder_a"
+				method="quick" href="javascript:void(0)">快速入门</a>
+			</li>
+			<li><a id="link-download" tag="nav" module="Download"
+				class="chearder_a" href="javascript:void(0)">下载</a>
+			</li>
+			<li><a id="link-plugin" tag="nav" module="plugin"
+				class="chearder_a" href="javascript:void(0)">插件</a>
+			</li>
+			<li><a id="link-api" tag="nav" module="API" class="chearder_a"
+				method="showMenu" href="javascript:void(0)">API</a>
+			</li>
+			<li><a id="link-about" tag="nav" module="About"
+				class="chearder_a" href="javascript:void(0)">关于Qmik</a>
+			</li>
+		</ul>
+	</div>
+</div>
