--- a/example/qmik/module/nav/header.html
+++ b/example/qmik/module/nav/header.html
@@ -66,14 +66,11 @@
 			<li><a id="link-download" tag="nav" module="Download"
 				class="chearder_a" href="javascript:void(0)">下载</a>
 			</li>
-			<li><a id="link-plugin" tag="nav" module="plugin"
-				class="chearder_a" href="javascript:void(0)">插件</a>
-			</li>
 			<li><a id="link-api" tag="nav" module="API" class="chearder_a"
 				method="showMenu" href="javascript:void(0)">API</a>
 			</li>
 			<li><a id="link-about" tag="nav" module="About"
-				class="chearder_a" href="javascript:void(0)">关于Qmik</a>
+				method="showAbout" class="chearder_a" href="javascript:void(0)">关于Qmik</a>
 			</li>
 		</ul>
 	</div>
