--- a/example/qmik/index.html
+++ b/example/qmik/index.html
@@ -52,18 +52,21 @@ body {
 		<!-- 主内容模块 -->
 		<div id="main_module" class="cmain"></div>
 	</div>
-
+     <!-- 加载框架 -->
 	<script type="text/javascript" src="../../assets/Qmik-debug.js"></script>
+	<!-- 加载配置文件 -->
 	<script type="text/javascript" src="module/config.js"></script>
+	
 	<script type="text/javascript">
+    // 界面初始化 
 		(function($, define) {
+			//依赖3个模块初始化
 			$.use([
-				"nav", "Qmik.nav", "home"
-			], function(headerNav, $, home) {
+				 "Qmik.nav","Nav", "Home"
+			], function($, headerNav, home) {
 				headerNav.showHeader();//显示头部导航
 				$.nav.onload(function() {
-					console.log("------ddd-112-")
-					home();
+					home.showHome();//显示首页
 				});
 			});
 		})(Qmik, Qmik.define);
