--- a/example/qmik/index.html
+++ b/example/qmik/index.html
@@ -4,7 +4,7 @@
 <meta name="keywords" content="Qmik js">
 <meta name="description"
 	content="Qmik是一个精简高效的js框架,核心框架大小20kb,是一个html5移动开发的最佳首选,修改了ajax的缓存机制,使您的网站得到飞速的体验,采用的html5的本地缓存机制加入了ajax的缓存里">
-<title>Qmik之家</title>
+<title></title>
 <meta name="copyright" content="2012-2012 Qmik. All Rights Reserved">
 <meta name="author" content="leochen">
 <meta name="format-detection" content="telephone=no">
@@ -55,7 +55,7 @@ body {
 	<!-- 加载框架 -->
 	<script type="text/javascript" src="../../assets/Qmik-debug.js"></script>
 	<!-- 加载配置文件 -->
-	<script type="text/javascript" src="module/config.js"></script>
+	<script type="text/javascript" src="module/Config.js"></script>
 
 	<script type="text/javascript">
 		// 界面初始化 
@@ -70,6 +70,8 @@ body {
 				});
 			});
 		})(Qmik, Qmik.define);
+		
+		//throw new Error("000emm me roor")
 	</script>
 </body>
 </html>
