--- a/example/qmik/index.html
+++ b/example/qmik/index.html
@@ -53,7 +53,7 @@ body {
 		<div id="main_module" class="cmain"></div>
 	</div>
 	<!-- 加载框架 -->
-	<script type="text/javascript" src="../../assets/Qmik-debug.js"></script>
+	<script type="text/javascript" src="../../assets/Qmik.js"></script>
 	<!-- 加载配置文件 -->
 	<script type="text/javascript" src="module/Config.js"></script>
 
