--- a/test/slider.html
+++ b/test/slider.html
@@ -90,7 +90,7 @@ img {
 			console.log(">>>>>>>>>>>>>>>>foces")
 		}).blur(function() {
 			console.log(">>>>>>>>>>>>>>>>blur")
-		}).resize(function() {
+		}).on("resize",function() {
 			console.log(">>>>>>>>>>>>resize")
 		})
 		console.log(document.hasFocus())
