--- a/test/testSun.html
+++ b/test/testSun.html
@@ -11,10 +11,13 @@
 <body>
 <div style="left: 300px;"> 
 asdfasfd
+<input id="in" type="text" value="dd" />
+<button onclick="in1()">修改</button>
 </div>
 
 </body>
 <script type="text/javascript" src="../assets/Qmik-debug.js"> </script>
 <!-- <script type="text/javascript" src="sea-debug.js"> </script>-->
-<script type="text/javascript " src="testSun.js "></script>
+<!--<script type="text/javascript " src="testSun.js "></script>-->
+
 </html>
