开发1.2.30版本,优化并增强sun模块的功能

--- a/test/testSun.html
+++ b/test/testSun.html
@@ -1,23 +1,22 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http - equiv="Content-Type" content="text/html; charset=utf-8"/ >
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name=”viewport” content=”width=device-width, initial-scale=1, maximum-scale=1″>
 <link rel="stylesheet" href="unit/qunit.css" type="text/css" media="screen" />
 <script type="text/javascript" src="unit/qunit.js"></script>
-
-
 <title></title>
 </head>
 <body>
 <div style="left: 300px;"> 
 asdfasfd
 <input id="in" type="text" value="dd" />
-<button onclick="in1()">修改</button>
+<button id="bbq">修改</button>
 </div>
 
 </body>
-<script type="text/javascript" src="../assets/Qmik-debug.js"> </script>
+<script type="text/javascript" src="../assets/Qmik-debug.js"></script>
 <!-- <script type="text/javascript" src="sea-debug.js"> </script>-->
-<!--<script type="text/javascript " src="testSun.js "></script>-->
+<script type="text/javascript" src="testSun.js"></script>
 
 </html>
