--- a/test/testSun.html
+++ b/test/testSun.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta name=”viewport” content=”width=device-width, initial-scale=1, maximum-scale=1″>
+<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.5,user-scalable=no" name="viewport" /> 
 <link rel="stylesheet" href="unit/qunit.css" type="text/css" media="screen" />
 <script type="text/javascript" src="unit/qunit.js"></script>
 <title></title>
