--- a/test/sun/testdemo.html
+++ b/test/sun/testdemo.html
@@ -31,20 +31,24 @@
 	});
 	$.use("demo/Demo1",function(Demo1){
 		Demo1.doing("..............demo1");
+		console.log("use demo1 ok");
 		console.log("\r\n\r\n-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-")
 	});
 	$.use("demo/Demo2",function(Demo2){
 		Demo2.doing("...>>>>>>>>>>>>>>>>>>>>demo2 xx");
+		console.log("use demo2 ok");
 		console.log("\r\n\r\n-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-")
 	});
 
 	$.use("demo/Demo3",function(Demo2){
 		Demo2.doing(".....................`demo3");
+		console.log("use demo3 ok");
 		console.log("\r\n\r\n-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-")
 	});
 
 	$.use("demo/Demo4",function(Demo2){
 		Demo2.doing("......xxxxxxxxxxxxxxxxxdemo4");
+		console.log("use demo4 ok");
 		console.log("\r\n\r\n-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-")
 	});
 	/*$.use(["demo/Demo1","demo/Demo2"],function(Demo1,Demo2){
