增加1.3.61版本,增加渲染引擎变量引用,变量引用方式: ${name}, 或 {{name}}

--- a/test/sun/testdemo.html
+++ b/test/sun/testdemo.html
@@ -11,7 +11,7 @@
 <div>
 </div>
 <script type="text/javascript">
-
+	console.log("\r\n\r\n-=-=-sun=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-start")
 
 	$.config({log:"debug"});
 	$.sun.config({
