--- a/test/sun/testdemo.html
+++ b/test/sun/testdemo.html
@@ -3,17 +3,20 @@
   <meta charset="gbk" /> 
   <meta content="width=device-width,user-scalable=no,initial-scale=1.0" name="viewport" /> 
   <meta name="-webkit-tap-highlight" content="no" /> 
-  <title>女装七夕清仓全场1折起</title> 
+  <title>test sun</title> 
   <script type="text/javascript" src="../unit/qunit.js"></script>
   <script type="text/javascript" src="../../assets/Qmik.js"></script>
 </head>
 <body>
 <div>
+<pre>
+	dfd
+</pre>
 </div>
 <script type="text/javascript">
 	console.log("\r\n\r\n-=-=-sun=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-start")
 
-	$.config({log:"debug"});
+	$.config({debug:true});
 	$.sun.config({
 		alias:{
 			"demo/Demo1":'${url}/demo1.js',
