--- a/test/testEvent.html
+++ b/test/testEvent.html
@@ -9,17 +9,14 @@
 <title></title>
 </head>
 <body>
-<div style="left: 300px;" ><a href="#name=me1&age=161;">1</a><br />
-<a href="#name=me2&age=162;">2</a><br />
-<a href="#name=me3&age=163;">3</a><br />
-<a href="#name=me4&age=164;">4</a><br />
-<a href="#name=me5&age=165;">5</a><br />
-<a href="#name=me6&age=166;">6</a><br />
-<a href="#name=me7&age=167;">7</a><br />
-<a href="#name=m天下&age=167;">天下</a><br />
-<a id="href1" href="javascript:">事件1:</a><br />
-<a id="href2" href="javascript:">事件2:</a><br />
-<a id="href3" href="javascript:">事件3:</a><br />
+<div style="left: 300px;" >
+	<a id="click1" href="#name=me1&age=161;">click 1  <span >cccccccc1</span></a><br />
+	<a id="click2" href="#name=me2&age=162;">click 2</a><br />
+	<a id="live1" href="#name=me5&age=165;">live 1 <span style="display:inline-block;width:50px;height:24px;">xxxxxxxx live 1</span></a><br />
+	<a id="live2" href="#name=me6&age=166;">live 2</a><br />
+	<a id="once1" href="javascript:">once 1</a><br />
+	<a id="die1" href="javascript:">die 1</a><br />
+	<a id="un1" href="javascript:">un 1</a><br />
 </div>
 
 </body>
