--- a/example/demo/sun/demo.html
+++ b/example/demo/sun/demo.html
@@ -1,6 +1,7 @@
 <html>
  <head> 
   <meta charset="utf8" /> 
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta content="width=device-width,user-scalable=no,initial-scale=1.0" name="viewport" /> 
   <meta name="-webkit-tap-highlight" content="no" /> 
   <title>测试sun模块开发</title> 
