--- a/example/demo/mvc.html
+++ b/example/demo/mvc.html
@@ -17,10 +17,11 @@
   	}
   </style>
 </head>
-<body name="${name}" go="${n1}+${name}" >
-    ${name} + ${n1}
-  <div qi-app>
-  	<form q-click="subccess()">
+<body name="${name}" go="${n1}+${name}" style="display:none;">
+    ${name} + ${n1} + {{degree}}
+  <div>
+    <input type="text" name="degree">
+  	<form q-ctrl="subdent"  q-submit="subccess()">
   		<input name="name" value="aaa" type="text" />
       <input id="n1" name="n1" value="n1" type="text" />
       <input id="n2" name="n2" value="n2" type="hidden" />
@@ -48,17 +49,18 @@
       ra2 <input type="radio" name="ra" value="ra2">
       ra3 <input type="radio" name="ra" value="ra3">
       <br/>
-  		name:${name} name:{{name}}  n1:${n1}  select:${select}  mselect:<${mselect}>
+  		showName:${showName} name:{{name}}  n1:${n1}  select:${select}  mselect:<${mselect}>
       textarea:${textarea}  cbk:${cbk}  ra:${ra}
       <ul q-for="item in list">
           <li name="${name}">  ${item.name} -- age:  ${ item.age } </li>
       </ul>
       <div q-ctrl="ctrlAbc">
-        ${addr}
+         ${addr}
       </div>
   	</form>
   	${n12}
   	<form q-ctrl="subdent1">
+       ctrl:subdent1: name=${name}
   	</form>
     ${n3} ${name}
 
@@ -98,39 +100,41 @@
       var app = $.app({
         name:'leo'
       });
-      app.ctrl("subdent", function(scope){
-          scope.watch("name", function(value){
-            value = value.replace(/xxoo/g, "**oo");
-            scope["name"] = value;
-          });
-          scope.list= [{
-            name: "k1"
-          },{
-            name: "k2",
-            age: 16
-          },{
-            name: "k2",
-            age: 16
-          },{
-            name: "k2",
-            age: 16
-          },{
-            name: "k2",
-            age: 16
-          },{
-            name: "k2",
-            age: 16
-          }];
-
-          $.delay(function(){
-              scope.list = [{
-                name:"mmn"
-              }];
-          }, 1000);
-      }).ctrl("ctrlAbc", function(scope){
-        scope.addr="fuji";
-        console.log(scope.rootScope);
+      app.ctrl({
+        "subdent": function(scope){     
+            scope.showName = scope.name;
+            scope.watch("name", function(value){
+              value = value.replace(/xxoo/g, "**oo");
+              scope.showName = value;
+            });
+            scope.list= [{
+              name: "k1"
+            },{
+              name: "k2",
+              age: 16
+            },{
+              name: "k2",
+              age: 16
+            },{
+              name: "k2",
+              age: 16
+            },{
+              name: "k2",
+              age: 16
+            },{
+              name: "k2",
+              age: 16
+            }];
+            $.delay(function(){
+                scope.list = [{
+                  name:"mmn"
+                }];
+            }, 1000);
+        },
+        "subdent1": function(scope){
+          scope.name="gogoxxoo";
+        }
       });
-    });
+    })
   </script>
  </body>
